# tools

./: .gitignore  .travis.yml  LICENSE  README.md  TIP.hs  make_parser.sh  minispec  rudimentocrates  rudimentophocles  stack.yaml  tip.cabal  vampspec
examples/: Case.hs  Int.hs  List.hs  Props.hs  mono-phantom.smt2  mono.smt2  mono2.smt2  mono3.smt2  simple-monomorphisation.smt2
prufa/: TreeTest.hs  TreeTest2.hs  TreeTest3.hs
tip-ghc/: tip-ghc.cabal
tip-ghc-annotations/: tip-ghc-annotations.cabal
tip-ghc/executable/: Main.hs
tip-ghc/src/: Main.hs  Tip.hs  errors.h
tip-ghc/src/Tip/: GHC.hs
tip-ghc/src/Tip/GHC/: Annotations.hs  Params.hs
tip-haskell-frontend/: changelog  tip-haskell-frontend.cabal
tip-haskell-frontend/Tip/: Calls.hs  Compile.hs  CoreToRich.hs  CoreToTip.hs  DataConPattern.hs  Dicts.hs  FreeTyCons.hs  HaskellFrontend.hs  Id.hs  Init.hs  Params.hs  ParseDSL.hs  Property.hs  ReadHaskellFile.hs  Unfoldings.hs  Uniquify.hs  Utils.hs
tip-haskell-frontend/executable/: Main.hs
tip-haskell-frontend/src/: Tip.hs
tip-haskell-frontend/src/Tip/: Compile.hs  CoreToTip.hs  DSL.hs  Dicts.hs  FreeTyCons.hs  GHCScope.hs  GHCUtils.hs  GenericInstances.hs  HaskellFrontend.hs  Id.hs  Make.hs  Params.hs  ParseDSL.hs  Prelude.hs  Property.hs  RemoveDefault.hs  Scope.hs  Translate.hs  TyAppBeta.hs  Unfoldings.hs
tip-lib/: changelog  tip-lib.cabal  tip.cabal
tip-lib-core/: LICENSE  tip-lib-core.cabal
tip-lib/executable/: Main.hs
tip-lib/src/: TIP.bnfc  Tip.hs  errors.h
tip-lib/src/Tip/: AddCase.hs  AxiomatizeFuncdefs.hs  CallGraph.hs  CommuteMatch.hs  Core.hs  Decase.hs  Delambda.hs  Denewtype.hs  Deprove.hs  EqualFunctions.hs  Eval.hs  Fresh.hs  Lambda.hs  Lift.hs  Lint.hs  Parser.hs  Passes.hs  Pretty.hs  QuickCheck.hs  Rename.hs  Renamer.hs  Scope.hs  Simplify.hs  Types.hs  Utils.hs  WorkerWrapper.hs  Writer.hs
tip-lib/src/Tip/Haskell/: GenericArbitrary.hs  Observers.hs  Rename.hs  Repr.hs  Translate.hs
tip-lib/src/Tip/Parser/: .gitignore  AbsTIP.hs  Convert.hs  ErrM.hs  LexTIP.x  ParTIP.y
tip-lib/src/Tip/Pass/: AddCase.hs  AddMatch.hs  AxiomatizeDatadecls.hs  AxiomatizeFuncdefs.hs  Booleans.hs  CSEMatch.hs  CommuteMatch.hs  Concretise.hs  Conjecture.hs  Decase.hs  Delambda.hs  Denewtype.hs  Deprove.hs  DropAttributes.hs  DropSuffix.hs  EliminateDeadCode.hs  EqualFunctions.hs  FillInCases.hs  Induction.hs  IntroduceFuncdefs.hs  Lift.hs  MakeMatchExhaustive.hs  Min.hs  Monomorphise.hs  NegateConjecture.hs  Pipeline.hs  RemoveDefaultCase.hs  RemoveMatch.hs  RemoveNewtype.hs  SelectConjecture.hs  SplitFormulas.hs  Uncurry.hs  UniqLocals.hs
tip-lib/src/Tip/Pretty/: Equations.hs  Haskell.hs  Hipster.hs  Hopster.hs  Isabelle.hs  SMT.hs  TFF.hs  Waldmeister.hs  Why3.hs
tip-lib/src/Tip/Utils/: Haskell.hs  Horn.hs  Rename.hs  Renamer.hs  SetCover.hs  Specialiser.hs  ToHaskell.hs
tip-prelude/: LICENSE  tip-prelude.cabal
tip-prelude/src/: Annotation.hs  Prelude.hs  Tip.hs
tip-prelude/src/Data/: List.hs
tip-prelude/src/Prelude/: Prim.hs
tip-spec/: tip-spec.cabal
tip-spec/executable/: Main.hs
tip-spec/src/Tip/: QuickSpec.hs
tip-spec/src/Tip/QuickSpec/: Translate.hs
tip-types/: tip-types.cabal
tip-types/src/Tip/: Types.hs
tip-types/src/Tip/GHC/: Annotations.hs
