name:                tip-ghc-annotations
version:             0.2
synopsis:            Convert from Haskell to Tip (GHC annotations only)
homepage:            http://tip-org.github.io
license:             BSD3
license-file:        LICENSE
author:              Nick Smallbone
maintainer:          nicsma@chalmers.se
category:            Theorem Provers
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: http://github.com/tip-org/tools
  subdir:   tip-ghc-annotations

library
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -W
  exposed-modules:
    Tip.GHC.Annotations
  build-depends:
    base >= 4 && < 5,
    tip-lib-core
