name:                tip-ghc
version:             0.2
synopsis:            Convert from Haskell to Tip
homepage:            http://tip-org.github.io
license:             BSD3
license-file:        LICENSE
author:              Nick Smallbone
maintainer:          nicsma@chalmers.se
category:            Theorem Provers
build-type:          Simple
cabal-version:       >=1.10

extra-source-files: src/errors.h

flag stack
  Description: Build under stack (internal use only; don't set this flag yourself)
  Default: False

source-repository head
  type:     git
  location: http://github.com/tip-org/tools
  subdir:   tip-ghc

library
  hs-source-dirs: src
  include-dirs: src
  default-language: Haskell2010
  ghc-options: -W
  exposed-modules:
    Tip
    Tip.GHC
    Tip.GHC.Params              
  build-depends:
    base >= 4 && < 5,
    containers,
    tip-lib,
    tip-ghc-annotations,
    optparse-applicative,
    ghc,
    ghc-boot,
    split,
    transformers,
    geniplate-mirror,
    bytestring,
    ghc-paths,
    QuickCheck,
    deepseq,
    pretty
    
executable tip-ghc
  main-is: Main.hs
  hs-source-dirs: executable
  default-language: Haskell2010
  ghc-options: -W

  build-depends:
    base, tip-lib, tip-ghc, optparse-applicative

  if flag(stack)
    build-depends: template-haskell, process
    cpp-options: -DSTACK
