name:                tip-haskell-frontend
version:             0.1.1
license:             BSD3
license-file:        LICENSE
author:              Dan Rosén
maintainer:          danr@chalmers.se
build-type:          Simple
cabal-version:       >=1.10
description:         Convert from Haskell to Tip
synopsis:            Convert from Haskell to Tip
homepage:            http://tip-org.github.io
bug-reports:         http://github.com/tip-org/tools/issues
category:            Theorem Provers

extra-source-files:  changelog

source-repository head
  type:     git
  location: http://github.com/tip-org/tools
  subdir:   tip-haskell-frontend

library
  exposed-modules:
    Tip.HaskellFrontend
    Tip
  other-modules:
    Tip.Params
    Tip.Id
    Tip.GHCUtils
    Tip.Calls
    Tip.Compile
    Tip.CoreToTip
    Tip.DataConPattern
    Tip.Dicts
    Tip.FreeTyCons
    Tip.ParseDSL
    Tip.Property
    Tip.RemoveDefault
    Tip.GHCScope
    Tip.TyAppBeta
    Tip.Unfoldings
    Tip.Uniquify
  hs-source-dirs:      src
  include-dirs:        src
  default-language:    Haskell2010
  build-depends:       base >=4 && <5,
                       ghc,
                       ghc-paths >=0.1,
                       containers >=0.4,
                       filepath >=1.3,
                       directory >=1.1,
                       pretty >=1.1,
                       mtl >=2.1,
                       bytestring >=0.9.2,
                       split >=0.2,
                       geniplate-mirror >=0.7.1,
                       tip-lib >= 0.1.1 && < 0.2,
                       QuickCheck >= 2.8

executable tip-ghc
  main-is:             executable/Main.hs
  default-language:    Haskell2010
  build-depends:       base,
                       tip-haskell-frontend,
                       tip-lib,
                       pretty-show,
                       pretty
