name:                tip-lib-core
version:             0.2.2
synopsis:            tons of inductive problems - type definitions
description:         This package provides a tool for processing inductive theorem proving problems in TIP format (see the homepage for details).
homepage:            http://tip-org.github.io
bug-reports:         http://github.com/tip-org/tools/issues
license:             BSD3
license-file:        LICENSE
author:              Dan Rosén, Nick Smallbone
maintainer:          nicsma@chalmers.se
category:            Theorem Provers
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: http://github.com/tip-org/tools
  subdir:   tip-lib-core

library
  exposed-modules:
    Tip.Types

  hs-source-dirs:      src
  ghc-options:         -W
  default-language:    Haskell2010
  build-depends:       base >=4 && <5,
                       geniplate-mirror >=0.7.1,
                       deepseq
