name:                tip-lib
version:             0.1
synopsis:            tons of inductive problems - support library
-- description:
homepage:            https://github.com/danr/tip
license:             BSD3
license-file:        LICENSE
author:              Dan Rosén
maintainer:          danr@chalmers.se
category:            Theorem Provers
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Tip
    Tip.Lint
    Tip.Types
    Tip.Scope
    Tip.Fresh
    Tip.WorkerWrapper
    Tip.Simplify
    Tip.Passes
    Tip.Pretty
    Tip.Pretty.SMT
    Tip.Pretty.Why3
    Tip.Pretty.Isabelle

    Tip.Parser

    Tip.Utils

    Tip.Renamer
    Tip.Utils.Renamer
  other-modules:
    Tip.Pass.AxiomatizeFuncdefs
    Tip.Pass.Lift
    Tip.Pass.CommuteMatch
    Tip.Pass.AddMatch
    Tip.Pass.RemoveNewtype
    Tip.Pass.RemoveMatch
    Tip.Pass.NegateConjecture
    Tip.Pass.EqualFunctions
    Tip.Pass.Uncurry
    Tip.Pass.Pipeline

    Tip.Parser.ErrM
    Tip.Parser.AbsTIP
    Tip.Parser.LexTIP
    Tip.Parser.ParTIP
    Tip.Parser.Convert

  hs-source-dirs:      src
  include-dirs:        src
  ghc-options:         -w
  default-language:    Haskell2010
  build-depends:       base >=4 && <5,
                       geniplate-mirror >=0.6.0.6,
                       split,
                       containers,
                       mtl,
                       pretty,
                       array

executable tip-parser
  main-is:             executable/Main.hs
  default-language:    Haskell2010
  build-depends:       base,
                       tip-lib,
                       pretty-show,
                       pretty
