name:                tip-lib
version:             0.1
synopsis:            tons of inductive problems - support library and tools
description:         This package provides a tool for processing inductive theorem proving problems in TIP format (see the homepage for details).
homepage:            http://tip-org.github.io
bug-reports:         http://github.com/tip-org/tools/issues
license:             BSD3
license-file:        LICENSE
author:              Dan Rosén, Nick Smallbone
maintainer:          danr@chalmers.se
category:            Theorem Provers
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: http://github.com/tip-org/tools

library
  exposed-modules:
    Tip.Core
    Tip.Lint
    Tip.Types
    Tip.Scope
    Tip.Fresh
    Tip.WorkerWrapper
    Tip.Simplify
    Tip.Passes
    Tip.Pretty
    Tip.Pretty.SMT
    Tip.Pretty.Why3
    Tip.Pretty.Isabelle
    Tip.Pretty.Haskell

    Tip.Parser

    Tip.Utils
    Tip.Writer

    Tip.Rename
    Tip.Utils.Rename
    Tip.Haskell.Repr
    Tip.Haskell.Translate
    Tip.Haskell.Rename
    Tip.CallGraph
  other-modules:
    Tip.Pass.AxiomatizeFuncdefs
    Tip.Pass.Lift
    Tip.Pass.Booleans
    Tip.Pass.CommuteMatch
    Tip.Pass.AddMatch
    Tip.Pass.CSEMatch
    Tip.Pass.RemoveNewtype
    Tip.Pass.RemoveMatch
    Tip.Pass.NegateConjecture
    Tip.Pass.EqualFunctions
    Tip.Pass.Uncurry
    Tip.Pass.Pipeline
    Tip.Pass.EliminateDeadCode
    Tip.Pass.FillInCases

    Tip.Parser.ErrM
    Tip.Parser.AbsTIP
    Tip.Parser.LexTIP
    Tip.Parser.ParTIP
    Tip.Parser.Convert

  hs-source-dirs:      src
  include-dirs:        src
  ghc-options:         -w
  default-language:    Haskell2010
  build-depends:       base >=4 && <5,
                       geniplate-mirror >=0.7.1,
                       split,
                       containers,
                       mtl,
                       pretty,
                       array,
                       optparse-applicative

executable tip
  main-is:             executable/Main.hs
  default-language:    Haskell2010
  build-depends:       base,
                       tip-lib,
                       pretty-show,
                       pretty,
                       optparse-applicative
