name:                tip-lib
version:             0.2.1
synopsis:            tons of inductive problems - support library and tools
description:         This package provides a tool for processing inductive theorem proving problems in TIP format (see the homepage for details).
homepage:            http://tip-org.github.io
bug-reports:         http://github.com/tip-org/tools/issues
license:             BSD3
license-file:        LICENSE
author:              Dan Rosén, Nick Smallbone
maintainer:          danr@chalmers.se
category:            Theorem Provers
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:  changelog src/errors.h

source-repository head
  type:     git
  location: http://github.com/tip-org/tools
  subdir:   tip-lib

library
  exposed-modules:
    Tip.Core
    Tip.Lint
    Tip.Types
    Tip.Scope
    Tip.Fresh
    Tip.WorkerWrapper
    Tip.Simplify
    Tip.Passes
    Tip.Pretty
    Tip.Pretty.SMT
    Tip.Pretty.Why3
    Tip.Pretty.Isabelle
    Tip.Pretty.Haskell
    Tip.Pretty.TFF

    Tip.Parser

    Tip.Utils
    Tip.Writer

    Tip.Rename
    Tip.Utils.Rename
    Tip.Haskell.Repr
    Tip.Haskell.Translate
    Tip.Haskell.Rename
    Tip.CallGraph
    Tip.Utils.Specialiser

    Tip.Pass.Booleans
  other-modules:
    Tip.Pass.AddMatch
    Tip.Pass.AxiomatizeFuncdefs
    Tip.Pass.AxiomatizeDatadecls
    Tip.Pass.CommuteMatch
    Tip.Pass.Conjecture
    Tip.Pass.CSEMatch
    Tip.Pass.DropSuffix
    Tip.Pass.EliminateDeadCode
    Tip.Pass.EqualFunctions
    Tip.Pass.FillInCases
    Tip.Pass.Induction
    Tip.Pass.Lift
    Tip.Pass.Monomorphise
    Tip.Pass.Pipeline
    Tip.Pass.RemoveMatch
    Tip.Pass.RemoveNewtype
    Tip.Pass.SelectConjecture
    Tip.Pass.Uncurry
    Tip.Pass.Concretise

    Tip.Parser.ErrM
    Tip.Parser.AbsTIP
    Tip.Parser.LexTIP
    Tip.Parser.ParTIP
    Tip.Parser.Convert

  hs-source-dirs:      src
  include-dirs:        src
  ghc-options:         -w
  default-language:    Haskell2010
  build-depends:       base >=4 && <5,
                       geniplate-mirror >=0.7.1,
                       genifunctors >= 0.3,
                       split,
                       containers,
                       mtl,
                       pretty,
                       array,
                       optparse-applicative,
                       structural-induction >= 0.3 && < 0.4
  build-tools:         alex, happy

executable tip
  main-is:             executable/Main.hs
  default-language:    Haskell2010
  build-depends:       base,
                       tip-lib,
                       pretty,
                       filepath,
                       optparse-applicative
