name:                tip-prelude
version:             0.2
license:             BSD3
license-file:        LICENSE
author:              Nick Smallbone
maintainer:          nicsma@chalmers.se
build-type:          Simple
cabal-version:       >=1.10
synopsis:            A version of the Haskell prelude for tip-haskell-frontend
homepage:            http://tip-org.github.io
bug-reports:         http://github.com/tip-org/tools/issues
category:            Theorem Provers

source-repository head
  type:     git
  location: http://github.com/tip-org/tools
  subdir:   tip-prelude

library
  exposed: False
  exposed-modules:
    Prelude
    Prelude.Prim
    Data.List
    Tip
  ghc-options:         -O0 -fexpose-all-unfoldings -fno-omit-interface-pragmas -fno-ignore-interface-pragmas -w
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >=4 && <5, ghc-prim, tip-types
