name:                tip-spec
version:             0.1
synopsis:            running QuickSpec on tip .smt2 files
-- description:
homepage:            https://github.com/tip-org/tools
license:             BSD3
license-file:        LICENSE
author:              Dan Rosén
maintainer:          Nick Smallbone, nicsma@chalmers.se
category:            Theorem Provers
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:  src/errors.h

flag stack
  Description: Build under stack (internal use only; don't set this flag yourself)
  Default: False

library
  exposed-modules:
    Tip.QuickSpec
  other-modules:
    Tip.QuickSpec.Translate

  hs-source-dirs:      src
  include-dirs:        src
  ghc-options:         -w
  default-language:    Haskell2010
  build-depends:       base >=4 && <5,
                       containers,
                       temporary,
                       filepath,
                       directory,
                       tip-lib,
                       testing-feat,
                       hint,
                       quickspec >= 2,
                       twee, transformers

executable tip-spec
  main-is:             executable/Main.hs
  ghc-options:         -dynamic
  default-language:    Haskell2010
  build-depends:       base,
                       tip-lib,
                       tip-spec,
                       quickspec,
                       optparse-applicative

  if flag(stack)
    build-depends: template-haskell, process
    cpp-options: -DSTACK
